--- a/proj/app/repo/templates/base.html
+++ b/proj/app/repo/templates/base.html
@@ -9,6 +9,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
       <meta name="viewport" content="width=device-width">
+      <meta http-equiv="refresh" content="15" >
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> 
       <link rel="stylesheet" href="{{ url_for('static', path='/index.css') }}">
   </head>
